# Ad_website

./: .gitignore  README.md  pyproject.toml  requirements.txt
skymarket/ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_ad_image.py  0003_alter_ad_created_at.py  0004_alter_comment_created_at.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_alter_user_image.py
